--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": ".eleventy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "eleventy",
-    "deploy": "npm run build && npx gh-pages -d _site -b gh-pages"
-  
+    "build": "eleventy"
   },
   "keywords": [],
   "author": "",
