--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "eleventy --serve",
-    "build": "eleventy"
+    "build": "env NODE_ENV=production npx eleventy --pathprefix 'LimitsAtInfinity01.github.io",
+    "serve": "npx eleventy --serve",
+    "debug": "DEBUG=* npx eleventy",
+    "test": "jest",
+    "deploy": "npm run build && npx gh-pages -d _site -b gh-pages"
   },
   "keywords": [],
   "author": "",
